[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/TileMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music/251461__joshuaempyre__arcade-music-loop.wav" type="AudioStream" id=6]
[ext_resource path="res://Music/bfxr_game-over.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -128, 0, 0, 0, 0, 480, -128 )
}

[node name="Main" type="Node"]
script = ExtResource( 2 )
mob_scene = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
z_index = 1

[node name="TileMap" parent="." instance=ExtResource( 5 )]
z_index = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.482353, 0.658824, 0.913725, 1 )

[node name="MobeTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 568 )
z_index = 1

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0, -128 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="MusicGame" type="AudioStreamPlayer" parent="."]
physics_interpolation_mode = 2
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[node name="deathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobeTimer" to="." method="_on_MobeTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
